
  - The "=for readme include" directive is no longer supported.

  [New Features]
  - Added support for plugins.

  - Added a "changes" plugin for parsing Changes files.

  [Documentation]
  - Changes rewritten to conform to CPAN::Changes::Spec.

  [Other Changes]
  - Switched to semantic versioning.

  - Added MANIFEST.SKIP to distribution.

  - QA tests are no longer part of the distribution.

0.11  2010-12-09

  - Recognise the =encoding directive, rather than dying when it's
    encountered.
    TODO: actually take heed of it.
    Thanks to Ivan Bessarabov for bringing this to my attention!

0.10  2010-05-19

  - David Precious <davidp@preshweb.co.uk> taking over maintainership

  - Apply POD fix patch from RT #38328, thanks to David A. Desrosiers

0.09  2006-11-25

  - uses Regexp::Common for URI parsing for L<> tag

  - added separate check for https, ftps, and svn URIs (rt.cpan.org
    bugs 23585 and 23613)

0.081 2006-05-07

  - released package without signature, due to Module::Signature
    issues

0.08  2006-05-01

  - head3/4 headings not recognized

  - went back to using Pod::PlainText

0.07  2006-02-11

  - added min version to use Pod::Text statement in source

  - removed multiple plans from the podcover test

0.06  2006-02-09

  - eliminated a warning about uninitialized values

  - recognizes =head3 and =head4 headings (from Pod::Text)

  - uses Pod::Text instead of Pod::PlainText

  - added internal documentation

  - added various QA tests

  - added "test" and "tests" as a rejected format

0.05 2005-06-07

  - pod2readme will backup an existing README file

  - minor updates to the documentation

0.04  2005-05-18

  - known other formats such as "html" are rejected

  - added missing prereq IO::File in Build.PL

  - added debug option

  - typos and tweaks for documentation

0.03  2005-05-08

  - added documentation to pod2readme script

  - include file start/stop marks are now Regexps

  - added more tests
