@@ -1,30 +1,44 @@
 use strict;
-use warnings;
-use ExtUtils::MakeMaker;
-WriteMakefile(
-    NAME => 'Pod::Readme',
-    AUTHOR => 'Robert Rothenberg <rrwo@cpan.org>',
-    VERSION_FROM => 'lib/Pod/Readme.pm',
-    ABSTRACT_FROM => 'lib/Pod/Readme.pm',
-    ($ExtUtils::MakeMaker::VERSION >= 6.3002
-        ? (LICENSE=> 'perl')
-                : ()),
-    PREREQ_PM => {
-        'CPAN::Changes'     => 0,
-        'Moose'             => 0,
-        'MooseX::NonMoose'  => 0,
-        'MooseX::Object::Pluggable' => 0,
-        'namespace::autoclean' => 0,
-        'parent'            => 0,
-        'Pod::Simple'       => 3.14,
-        'Test::Most'        => 0,
-        'version'           => 0.77,
-    },
-    INSTALLDIRS => 'site',
-    EXE_FILES => [
-                    'bin/pod2readme'
-                    ],
-    PL_FILES => {},
-    dist       => { COMPRESS => 'gzip -9f', SUFFIX => 'gz' },
-    clean      => { FILES => 'Pod-Readme-*' },
+use warnings FATAL => 'all';
+use inc::Module::Install;
+
+author 'Robert Rothenberg <rrwo@cpan.org>';
+name 'Pod-Readme';
+all_from 'lib/Pod/Readme.pm';
+license 'artistic2';
+
+perl_version 5.010;
+
+tests_recursive('t');
+
+# tests_recursive('xt');
+
+resources(
+    license    => 'http://www.perlfoundation.org/artistic_license_2_0',
+    repository => 'git://github.com/bigpresh/Pod-Readme.git',
+    bugtracker => 'https://github.com/bigpresh/Pod-Readme/issues',
 );
+
+configure_requires();
+
+build_requires( 'Test::Most' => 0, );
+
+requires(
+    'CPAN::Changes'             => 0,
+    'Moose'                     => 0,
+    'MooseX::NonMoose'          => 0,
+    'MooseX::Object::Pluggable' => 0,
+    'namespace::autoclean'      => 0,
+    'parent'                    => 0,
+    'Pod::Simple'               => 3.14,
+    'version'                   => 0.77,
+);
+
+test_requires( 'Test::Most' => 0, );
+
+install_script( qw{ bin/pod2readme } );
+
+install_as_cpan;
+auto_install;
+WriteAll;
+
