@@ -24,6 +24,8 @@ v0.999.1
 
   - QA tests are no longer part of the distribution.
 
+  - Makefile.PL uses Module::Install.
+
 0.11  2010-12-09
 
   - Recognise the =encoding directive, rather than dying when it's
